--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>about</title>
+    <title>about Tamar Omsarashvili</title>
     <link rel="shortcut icon" href="./img/favicon-32x32.png">
     <link rel="stylesheet" type="text/css"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
