--- a/zip files/exercise 1-7/index.html
+++ b/zip files/exercise 1-7/index.html
@@ -33,17 +33,20 @@
         </nav>
     </header>
     <main>
-        <div class="profile">
+       <div class="profile">
             <img src="img/tamarphoto.jpg" class="profile__portrait" alt="photo of me">
-            <h1>Hello World</h1>
-            <p>
+         
+          <div class="welcome-text">
+                <h1>Hello World</h1>
+                <p>
                 My name is Tamar Omsarashvili. I am a <span>web</span> developer from the Netherlands.
-            </p>
-            <a href="#">check out some of my code</a>
-        </div>
-        <a href="#">default link</a>
-        <button>default button</button>
-        <button class="button_secondary">secondary-Button</button>
+                </p>
+                <a href="#">check out some of my code</a>
+          </div>
+          <a href="#">default link</a>
+          <button>default button</button>
+          <button class="button_secondary">secondary-Button</button>
+       </div> 
     </main>
     <footer class="page-footer">
         <p>
