--- a/zip files/exercise 1-7/about.html
+++ b/zip files/exercise 1-7/about.html
@@ -1468,7 +1468,7 @@
                 </path>
             </g>
         </svg>
-        <table>
+        <table class="skills-table">
             <thead>
                 <tr>
                     <td>Skills</td>
