--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
     </header>
     <main>
         <div class="about-myself">
-            <h1 id="about">About </h1>
+            <h1 id="about">About me</h1>
             <p>
                 This page is about myself. This is what I enjoy doing:
             </p>
