--- a/contact.html
+++ b/contact.html
@@ -53,19 +53,17 @@
         <div class="contact-form">
             <form action="" method="post" id="contact-form">
                 <label class="standard-label" for="fullname">Full Name:</label>
-                <input type="text" id="fullname" placeholder="Full name">
+                <input type="text" id="fullname">
                 <br>
-
                 <label class="standard-label" for="contact-email">Email:</label>
-                <input type="text" id="contact-email" placeholder="Your email" required>
+                <input type="text" id="contact-email" required>
                 <br>
                 <label class="standard-label" for="tel">Telephone:</label>
-                <input type="text" id="tel" placeholder="Telephone number">
+                <input type="text" id="tel">
                 <br>
-
                 <label class="standard-label" for="message">Message:</label>
-                <textarea name="" id="message" placeholder="Type your message here" cols="30" rows="10" maxlength="240"
-                    required></textarea>
+                <textarea name="" id="message" cols="30" rows="10" maxlength="240" required>
+                </textarea>
                 <br>
                 <input type="submit" value="send" class="submit">
             </form>
