--- a/contact.html
+++ b/contact.html
@@ -43,7 +43,7 @@
             </div>
             <br>
             <div class="contact-details">
-                <a href="tel:+49123456789">Call me</a> <br>
+                <a href="tel:+49123456789">Click here to call me</a> <br>
                 Email: <a href="mailto:t_omsara@yahoo.com">t_omsara@yahoo.com</a> <br>
                 Skype: <a href="skype:Tamar Omsarashvili">Tamar Omsarashvili</a> <br>
                 <a href="mailto:t_omsara@yahoo.com">contact me via email</a>
