--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <main>
         <div class="profile">
             <img src="img/tamarphoto.jpg" class="profile__portrait" alt="photo of me">
-            <div class="welcome-text">
-                <h1>Hello World</h1>
-                <p>
-                    My name is Tamar Omsarashvili. I am a <span>web</span> developer from the Netherlands.
-                </p>
-                <a href="#">check out some of my code</a>
-            </div>
+            <h1>Hello World</h1>
+            <p>
+                My name is Tamar Omsarashvili. I am a <span>web</span> developer from the Netherlands.
+            </p>
+        </div>
+        <div class="profile-button">
+            <a href="#">check out some of my code</a>
             <a href="#">default link</a>
             <button>default button</button>
             <button class="button_secondary">secondary-Button</button>
