added more information about the projects i have worked on

--- a/contact.html
+++ b/contact.html
@@ -37,10 +37,7 @@
         <h1>Contact</h1>
         <div>
             <div class="address">
-                Tamar Omsarashvili <br>
-                Kalverstraat 1 <br>
-                1011xb Amsterdam <br>
-                The Netherlands <br>
+                <p>Based in Freiburg im Breisgau, Germany</p> 
             </div>
             <br>
             <div class="contact-details">
