--- a/work.html
+++ b/work.html
@@ -14,7 +14,6 @@
 
 <body>
     <header class="page-header">
-        <!--add the logo here-->
         <img src="img/tamar_logo.png" alt="logo" class="page-header__item">
         <nav class="main-navigation page-header__item">
             <ul role="menubar" class="navigation-list">
@@ -38,46 +37,124 @@
             <h1>Work</h1>
             <div class="grid">
                 <div class="grid__item">
-                    <h2>Mobile Web App</h2>
+                    <img src="" alt="website photo">
+                    <h2>Pokedex</h2>
                     <p>
-                        In this project I have created my first HTML and CSS templates.
+                        The Pokedex App is my first JavaScript project, 
+                        designed to help me learn the fundamentals of JavaScript.<br>
+                        It showcases a list of 150 Pokemon, sourced from the external API (https://pokeapi.co/).
+                        When you click on a pokemon a modal window with the details such as: name, height, type and a photo of the Pokemon appears. 
+                        In order to close the modal, you can click on the X on the top right corner, close on the bottom right corner, 
+                        click outside the window or click the escape button.
                     </p>
-                    <a href="#">See my project on Github</a>
+                    <p>
+                        <h3>Technologies Used:</h3>
+                    <ul> 
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>JavaScript</li>
+                        <li>jQuery</li>
+                        <li>Bootstrap</li>
+                    </ul>
+                </p>
+                <p>
+                This app demonstrates my proficiency in using these technologies to create an interactive and
+                informative user experience.
+                </p>
+                    <a href="https://github.com/tamomsi/simple-js-app" target="_blank"> <img src="img/github.svg" alt="Github"></a>
+                    <a href="https://tamomsi.github.io/simple-js-app/" target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
                 </div>
                 <div class="grid__item">
-                    <h2>My Project</h2>
+                    <img src="" alt="website photo">
+                    <h2>Movie api</h2>
                     <p>
-                        here you can find more of my work
+                        In this project I have built the server-side component of a “movies” web application, 
+                        which provides users with access to information about different movies, 
+                        directors and genres. Users are able to sign up, update their personal information and create a list of their favourite movies 
+                        or remove a movie from their list of favourites.
                     </p>
-                    <a href="#">See more of my work</a>
+                    <h3>Technologies Used:</h3>
+                    <ul>
+                        <li>Server-Side: Node.js, Express</li>
+                        <li>Database: MongoDB</li>
+                        <li>Middleware: body-parser (for reading data from requests), morgan (for logging)</li>
+                        <li>Object Data Modeling: Mongoose</li>
+                        <li>Authentication and Authorization: Included in the API</li>
+                        <li>Data Validation: Implemented in the API logic</li>
+                        <li>Testing: Postman</li>
+                        <li>Deployment: GitHub, Heroku</li>
+                    </ul>
+                    <a href="https://github.com/tamomsi/movie_api" target="_blank"> <img src="img/github.svg" alt="Github"></a>
+                    <a href="https://tamarflix.herokuapp.com/" target="_blank"> <img src="img/link.svg" alt="website link"></a>
                 </div>
                 <div class="grid__item">
-                    <h2>My Blog</h2>
+                    <img src="" alt="website photo">
+                    <h2>Meet App</h2>
                     <p>
-                        In this project I have created my first blog.
+                        Meet App is a serverless, progressive web application (PWA) developed with React. 
+                        It enables users to search for events in specific cities using the Google Calendar API. <br>
+                        The app offers various features like offline support, push notifications, and a responsive design. 
+                        With a focus on high-quality code and adequate test coverage through a TDD approach, Meet App ensures scalability, availability, 
+                        and a great user experience. Data visualization plays a significant role in the app, showcasing upcoming events by city and event genre popularity through charts. 
+                        The integration of serverless functions allows for efficient backend management, scaling, and cost optimization.
                     </p>
-                    <a href="#">See my Blog</a>
+                    <h3>Technologies Used:</h3>
+                    <ul>
+                        <li>Front-End: React</li>
+                        <li>Backend: Serverless (AWS Lambda)</li>
+                        <li>API Integration: Google Calendar API</li>
+                        <li>Testing: Test-Driven Development (TDD) approach</li>
+                        <li>Data Visualization: Charts (Number of upcoming events by city, popularity of event genres)</li>    
+                        <li>Features: Offline support, push notifications, add-to-home-screen prompt, responsive design</li>
+                    </ul>
+                    <a href="https://github.com/tamomsi/meet" target="_blank"> <img src="img/github.svg" alt="Github"></a>
+                    <a href="https://tamomsi.github.io/meet/" target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
                 </div>
                 <div class="grid__item">
-                    <h2>Styleguide for my project</h2>
+                    <img src="" alt="website photo">
+                    <h2>MyFlix (Client)</h2>
                     <p>
-                        In this project I have created some styleguide for my project.
+                        This is the client-side of the MyFlix app, built using the React framework.
+                        The app includes several interface views that handle data through the previously defined REST API endpoints.
+                        The app allows users to sign up, log in, browse movies, add movies to their list of favorites, and view details about individual movies.
                     </p>
-                    <a href="#">See my styleguide</a>
+                    <h3>Technologies Used</h3>
+                    <ul>
+                        <li>React</li>
+                    </ul>
+                    <a href="https://github.com/tamomsi/myFlix-client" target="_blank"> <img src="img/github.svg" alt="Github"></a>
+                    <a href="https://my-flix-client-liart.vercel.app/" target="_blank"> <img src="img/link.svg" alt="website link"></a>
                 </div>
                 <div class="grid__item">
-                    <h2>About me</h2>
+                    <h2>Chat App</h2>
                     <p>
-                        I have written some information about me and my work.
+                        The objective of this project was to develop a chat app for mobile devices using React Native. 
+                        The app enables users to engage in chat conversations, share images, and exchange location information.
                     </p>
-                    <a href="#">more about my work</a>
+                    <h3>Technologies Used</h3>
+                    <ul>
+                        <li>Framework: React Native with Expo</li>
+                        <li>Database: Google Firestore Database for storing chat conversations</li>
+                        <li>Authentication: Google Firebase authentication for anonymous user authentication</li>
+                        <li>Storage: Firebase Cloud Storage for image storage</li>
+                        <li>Map Integration: Sending and displaying location data using a map view</li>
+                        <li>Library: Utilized the Gifted Chat library for chat interface and functionality</li>
+                    </ul>
+                    <a href="https://github.com/tamomsi/Chat-app" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                 </div>
                 <div class="grid__item">
-                    <h2>Contact</h2>
+                    <h2>myFlix Angular (client)</h2>
                     <p>
-                        Need more information? here is how you can contact me.
+                        MyFlixAngularClient is an Angular-based project generated with Angular CLI version 16.0.4. It serves as the client-side application for MyFlix, providing an interactive user interface to access and manage movie information.
                     </p>
-                    <a href="#">Send me an email</a>
+                    <h3>Technologies Used</h3>
+                    <ul>
+                        <li>Angular CLI (version 16.0.4)</li>
+                        <li>Angular Framework</li>
+                    </ul>
+                    <a href="https://github.com/tamomsi/myFlix-Angular-client" target="_blank"> <img src="img/github.svg" alt="Github"></a>
+                    <a href="https://tamomsi.github.io/myFlix-Angular-client/
+                    " target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
                 </div>
             </div>
         </section>
