corrected the footer on index.html

--- a/work.html
+++ b/work.html
@@ -37,9 +37,9 @@
             <h1>Work</h1>
             <div class="grid">
                 <div class="grid__item">
-                    <img src="" alt="website photo">
+                    <img src="/Users/Tamar/Desktop/portfolio-img/Pokedex.png" alt="website photo">
                     <h2>Pokedex</h2>
-                    <p>
+                    <p class="content">
                         The Pokedex App is my first JavaScript project, 
                         designed to help me learn the fundamentals of JavaScript.<br>
                         It showcases a list of 150 Pokemon, sourced from the external API (https://pokeapi.co/).
@@ -61,11 +61,13 @@
                 This app demonstrates my proficiency in using these technologies to create an interactive and
                 informative user experience.
                 </p>
+                <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/simple-js-app" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamomsi.github.io/simple-js-app/" target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
                 </div>
+                </div>
                 <div class="grid__item">
-                    <img src="" alt="website photo">
+                    <img src="/Users/Tamar/Desktop/portfolio-img/movie-api.png" alt="website photo">
                     <h2>Movie api</h2>
                     <p>
                         In this project I have built the server-side component of a “movies” web application, 
@@ -84,11 +86,13 @@
                         <li>Testing: Postman</li>
                         <li>Deployment: GitHub, Heroku</li>
                     </ul>
+                    <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/movie_api" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamarflix.herokuapp.com/" target="_blank"> <img src="img/link.svg" alt="website link"></a>
+                    </div>
                 </div>
                 <div class="grid__item">
-                    <img src="" alt="website photo">
+                    <img src="/Users/Tamar/Desktop/portfolio-img/meetapp.png" alt="website photo">
                     <h2>Meet App</h2>
                     <p>
                         Meet App is a serverless, progressive web application (PWA) developed with React. 
@@ -107,11 +111,13 @@
                         <li>Data Visualization: Charts (Number of upcoming events by city, popularity of event genres)</li>    
                         <li>Features: Offline support, push notifications, add-to-home-screen prompt, responsive design</li>
                     </ul>
+                    <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/meet" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamomsi.github.io/meet/" target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
                 </div>
+                </div>
                 <div class="grid__item">
-                    <img src="" alt="website photo">
+                    <img src="/Users/Tamar/Desktop/portfolio-img/myflix.png" alt="website photo">
                     <h2>MyFlix (Client)</h2>
                     <p>
                         This is the client-side of the MyFlix app, built using the React framework.
@@ -122,10 +128,13 @@
                     <ul>
                         <li>React</li>
                     </ul>
+                    <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/myFlix-client" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://my-flix-client-liart.vercel.app/" target="_blank"> <img src="img/link.svg" alt="website link"></a>
                 </div>
+                </div>
                 <div class="grid__item">
+                    <img src="/Users/Tamar/Desktop/portfolio-img/chat-app.png" alt="website photo">
                     <h2>Chat App</h2>
                     <p>
                         The objective of this project was to develop a chat app for mobile devices using React Native. 
@@ -140,9 +149,12 @@
                         <li>Map Integration: Sending and displaying location data using a map view</li>
                         <li>Library: Utilized the Gifted Chat library for chat interface and functionality</li>
                     </ul>
+                    <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/Chat-app" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                 </div>
+                </div>
                 <div class="grid__item">
+                    <img src="/Users/Tamar/Desktop/portfolio-img/myflix-angular.png" alt="website photo">
                     <h2>myFlix Angular (client)</h2>
                     <p>
                         MyFlixAngularClient is an Angular-based project generated with Angular CLI version 16.0.4. It serves as the client-side application for MyFlix, providing an interactive user interface to access and manage movie information.
@@ -151,10 +163,12 @@
                     <ul>
                         <li>Angular CLI (version 16.0.4)</li>
                         <li>Angular Framework</li>
-                    </ul>
+                    </ul>  
+                    <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/myFlix-Angular-client" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamomsi.github.io/myFlix-Angular-client/
                     " target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
+                </div>
                 </div>
             </div>
         </section>
@@ -166,7 +180,7 @@
         <div class="social-media">
             <ul class="social-media-list">
                 <li>
-                    <a href="https://github.com/" target="_blank"> <img src="img/github.svg" alt="Github"></a>
+                    <a href="https://github.com/" target="_blank"><img src="img/github.svg" alt="Github"></a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
@@ -177,6 +191,7 @@
             </ul>
         </div>
     </footer>
+
     <script src="js/tota11y.min.js"></script>
 </body>
 
