added actual links and information about my work

--- a/about.html
+++ b/about.html
@@ -41,9 +41,9 @@
             </p>
             <ul class="activities">
                 <li>Front-end development</li>
-                <li>back-end development</li>
+                <li>Back-end development</li>
                 <li>Test driven development</li>
-                <li>Climbing</li>
+                <li>CrossFit</li>
             </ul>
         </div>
         <div class="button-container">
@@ -1480,13 +1480,13 @@
             <tbody>
                 <tr>
                     <td>html</td>
-                    <td>5</td>
-                    <td>advanced</td>
+                    <td>1</td>
+                    <td>Beginner</td>
                 </tr>
                 <tr>
                     <td>css</td>
-                    <td>4</td>
-                    <td>advanced</td>
+                    <td>1</td>
+                    <td>Beginner</td>
                 </tr>
                 <tr>
                     <td>Javascript</td>
@@ -1506,7 +1506,7 @@
                     <a href="https://github.com/" target="_blank"><img src="img/github.svg" alt="Github"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/in/tamar-omsarashvili-69a517154/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
                 </li>
                 <li>
                     <a href="https://twitter.com/" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
