--- a/contact.html
+++ b/contact.html
@@ -77,7 +77,7 @@
                     <a href="https://github.com/" target="_blank"><img src="img/github.svg" alt="Github"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/in/tamar-omsarashvili-69a517154/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
                 </li>
                 <li>
                     <a href="https://twitter.com/" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
