--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
             <p>
                 My name is Tamar Omsarashvili. I am a <span>web</span> developer from the Netherlands.
             </p>
-        </div>
-        <div class="profile-button">
-            <a href="#">check out some of my code</a>
-            <a href="#">default link</a>
-            <button>default button</button>
-            <button class="button_secondary">secondary-Button</button>
+            <a href="https://github.com/tamomsi">check out some of my code</a>
         </div>
     </main>
     <footer class="page-footer">
@@ -57,7 +52,7 @@
                     <a href="https://github.com/" target="_blank"><img src="img/github.svg" alt="Github"></a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
+                    <a href="https://www.linkedin.com/in/tamar-omsarashvili-69a517154/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
                 </li>
                 <li>
                     <a href="https://twitter.com/" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
