update path of images

--- a/work.html
+++ b/work.html
@@ -37,7 +37,7 @@
             <h1>Work</h1>
             <div class="grid">
                 <div class="grid__item">
-                    <img src="/Users/Tamar/Desktop/portfolio-img/Pokedex.png" alt="website photo">
+                    <img src="./img/Pokedex.png" alt="website photo">
                     <h2>Pokedex</h2>
                     <p class="content">
                         The Pokedex App is my first JavaScript project, 
@@ -67,7 +67,7 @@
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="/Users/Tamar/Desktop/portfolio-img/movie-api.png" alt="website photo">
+                    <img src="./img/movie-api.png" alt="website photo">
                     <h2>Movie api</h2>
                     <p>
                         In this project I have built the server-side component of a “movies” web application, 
@@ -92,7 +92,7 @@
                     </div>
                 </div>
                 <div class="grid__item">
-                    <img src="/Users/Tamar/Desktop/portfolio-img/meetapp.png" alt="website photo">
+                    <img src="./img/meetapp.png" alt="website photo">
                     <h2>Meet App</h2>
                     <p>
                         Meet App is a serverless, progressive web application (PWA) developed with React. 
@@ -117,7 +117,7 @@
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="/Users/Tamar/Desktop/portfolio-img/myflix.png" alt="website photo">
+                    <img src="./img/myflix.png" alt="website photo">
                     <h2>MyFlix (Client)</h2>
                     <p>
                         This is the client-side of the MyFlix app, built using the React framework.
@@ -134,7 +134,7 @@
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="/Users/Tamar/Desktop/portfolio-img/chat-app.png" alt="website photo">
+                    <img src="./img/chat-app.png" alt="website photo">
                     <h2>Chat App</h2>
                     <p>
                         The objective of this project was to develop a chat app for mobile devices using React Native. 
@@ -154,7 +154,7 @@
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="/Users/Tamar/Desktop/portfolio-img/myflix-angular.png" alt="website photo">
+                    <img src="./img/myflix-angular.png" alt="website photo">
                     <h2>myFlix Angular (client)</h2>
                     <p>
                         MyFlixAngularClient is an Angular-based project generated with Angular CLI version 16.0.4. It serves as the client-side application for MyFlix, providing an interactive user interface to access and manage movie information.
