added twitter links

--- a/about.html
+++ b/about.html
@@ -1509,7 +1509,7 @@
                     <a href="https://www.linkedin.com/in/tamar-omsarashvili-69a517154/" target="_blank"><img src="img/linkedin.svg" alt="LinkedIn"></a>
                 </li>
                 <li>
-                    <a href="https://twitter.com/" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
+                    <a href="https://twitter.com/TamarOmsara" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
                 </li>
             </ul>
         </div>
