added medium link

--- a/work.html
+++ b/work.html
@@ -188,6 +188,9 @@
                 <li>
                     <a href="https://twitter.com/TamarOmsara" target="_blank"><img src="img/twitter.svg" alt="Twitter"></a>
                 </li>
+                <li>
+                    <a href="https://medium.com/@tamomsara" target="_blank"><img src="img/medium.svg" alt="Medium"></a>
+                </li>
             </ul>
         </div>
     </footer>
