added introduction about me

--- a/index.html
+++ b/index.html
@@ -35,9 +35,15 @@
     <main>
         <div class="profile">
             <img src="img/tamarphoto.jpg" class="profile__portrait" alt="photo of me">
-            <h1>Hello World</h1>
+            <h1>Welcome to my web developer portfolio!</h1>
             <p>
-                My name is Tamar Omsarashvili. I am a <span>web</span> developer from the Netherlands.
+                I am Tamar Omsarashvili, transitioning from a retail background to web development.
+            </p> 
+            <p> 
+                I've dedicated myself to learning web development concepts, languages, and frameworks. My portfolio showcases projects that demonstrate 
+                my growth, ranging from static websites to dynamic applications. Combining attention to detail and a passion for exceptional 
+                user experiences, I offer a unique perspective. Continuously seeking growth and staying updated, I'm excited to collaborate and 
+                contribute to the digital landscape. 
             </p>
             <a href="https://github.com/tamomsi">check out some of my code</a>
         </div>
