--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         <div class="profile">
             <img src="img/tamarphoto.jpg" class="profile__portrait" alt="photo of me">
             <h1>Welcome to my web developer portfolio!</h1>
+            <div>
             <p>
                 I am Tamar Omsarashvili, transitioning from a retail background to web development.
             </p> 
@@ -47,6 +48,7 @@
             </p>
             <a href="https://github.com/tamomsi">check out some of my code</a>
         </div>
+    </div>
     </main>
     <footer class="page-footer">
         <p>
@@ -69,7 +71,6 @@
             </ul>
         </div>
     </footer>
-    <script src="js/tota11y.min.js"></script>
 </body>
 
 </html>
