--- a/work.html
+++ b/work.html
@@ -37,7 +37,8 @@
             <h1>Work</h1>
             <div class="grid">
                 <div class="grid__item">
-                    <img src="./img/Pokedex.png" alt="website photo">
+                    <div class="space_bottom">
+                    <img class="project_image" src="./img/Pokedex.png" alt="website photo">
                     <h2>Pokedex</h2>
                     <p class="content">
                         The Pokedex App is my first JavaScript project, 
@@ -61,13 +62,15 @@
                 This app demonstrates my proficiency in using these technologies to create an interactive and
                 informative user experience.
                 </p>
+            </div>
                 <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/simple-js-app" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamomsi.github.io/simple-js-app/" target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="./img/movie-api.png" alt="website photo">
+                    <div class="space_bottom">
+                    <img class="project_image" src="./img/movie-api.png" alt="website photo">
                     <h2>Movie api</h2>
                     <p>
                         In this project I have built the server-side component of a “movies” web application, 
@@ -86,13 +89,15 @@
                         <li>Testing: Postman</li>
                         <li>Deployment: GitHub, Heroku</li>
                     </ul>
+                </div>
                     <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/movie_api" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamarflix.herokuapp.com/" target="_blank"> <img src="img/link.svg" alt="website link"></a>
                     </div>
                 </div>
                 <div class="grid__item">
-                    <img src="./img/meetapp.png" alt="website photo">
+                    <div class="space_bottom">
+                    <img class="project_image" src="./img/meetapp.png" alt="website photo">
                     <h2>Meet App</h2>
                     <p>
                         Meet App is a serverless, progressive web application (PWA) developed with React. 
@@ -111,13 +116,15 @@
                         <li>Data Visualization: Charts (Number of upcoming events by city, popularity of event genres)</li>    
                         <li>Features: Offline support, push notifications, add-to-home-screen prompt, responsive design</li>
                     </ul>
+                </div>
                     <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/meet" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamomsi.github.io/meet/" target="_blank"> <img src="img/link.svg" alt="website link"></a><br>
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="./img/myflix.png" alt="website photo">
+                    <div class="space_bottom">
+                    <img class="project_image" src="./img/myflix.png" alt="website photo">
                     <h2>MyFlix (Client)</h2>
                     <p>
                         This is the client-side of the MyFlix app, built using the React framework.
@@ -128,13 +135,15 @@
                     <ul>
                         <li>React</li>
                     </ul>
+                </div>
                     <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/myFlix-client" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://my-flix-client-liart.vercel.app/" target="_blank"> <img src="img/link.svg" alt="website link"></a>
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="./img/chat-app.png" alt="website photo">
+                    <div class="space_bottom">
+                    <img class="project_image" src="./img/chat-app.png" alt="website photo">
                     <h2>Chat App</h2>
                     <p>
                         The objective of this project was to develop a chat app for mobile devices using React Native. 
@@ -149,21 +158,25 @@
                         <li>Map Integration: Sending and displaying location data using a map view</li>
                         <li>Library: Utilized the Gifted Chat library for chat interface and functionality</li>
                     </ul>
+                </div>
                     <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/Chat-app" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                 </div>
                 </div>
                 <div class="grid__item">
-                    <img src="./img/myflix-angular.png" alt="website photo">
+                    <div class="space_bottom">
+                    <img class="project_image" src="./img/myflix-angular.png" alt="website photo">
                     <h2>myFlix Angular (client)</h2>
                     <p>
                         MyFlixAngularClient is an Angular-based project generated with Angular CLI version 16.0.4. It serves as the client-side application for MyFlix, providing an interactive user interface to access and manage movie information.
                     </p>
+                    
                     <h3>Technologies Used</h3>
                     <ul>
                         <li>Angular CLI (version 16.0.4)</li>
                         <li>Angular Framework</li>
-                    </ul>  
+                    </ul>
+                    </div>
                     <div class="grid__item-tags">
                     <a href="https://github.com/tamomsi/myFlix-Angular-client" target="_blank"> <img src="img/github.svg" alt="Github"></a>
                     <a href="https://tamomsi.github.io/myFlix-Angular-client/
@@ -194,7 +207,6 @@
             </ul>
         </div>
     </footer>
-    <script src="js/tota11y.min.js"></script>
 </body>
 
 </html>
